--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,6 +62,7 @@ body {
 .surah-list {
   /* margin-top: 6rem; */
   display: grid;
+  margin-top: 6rem;
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
 }
@@ -143,8 +144,9 @@ body {
 }
 
 .ayah-item {
-  padding: 1rem;
   display: flex;
+  padding: 1rem;
+  flex-direction: row;
   align-items: center;
 }
 
@@ -192,7 +194,8 @@ body {
 }
 
 .ayah-item .translation {
-  width: 70ch;
+  max-width: 70ch;
+  width: 100%;
   margin-bottom: 1rem;
 }
 
@@ -203,4 +206,59 @@ body {
 
 audio, source {
   display: none;
+}
+
+footer {
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 6rem;
+  font-size: 1.4rem;
+  color: #777;
+  margin-bottom: 6rem;
+}
+
+@media only screen and (max-width: 992px) {
+  .surah {
+    gap: 2rem;
+  }
+  
+}
+
+@media only screen and (max-width: 768px) {
+  .heading h1 {
+    font-size: 5rem;
+  }
+
+  .heading h4 {
+    font-size: 3.4rem;
+  }
+
+  .controls {
+    width: 2rem;
+  }
+
+  .ayah-list {
+    padding: 1rem;
+  }
+
+  .ayah-item {
+    font-size: 2rem;
+  }
+
+  .surah-list {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media only screen and (max-width: 580px) {
+  .ayah-item {
+    flex-direction: column;
+    align-items: baseline;
+    padding: 0;
+  }
+
+  .controls {
+    flex-direction: row;
+  }
 }
